# ude-ros-bridge

./: README.md
ude_ros_env/: CMakeLists.txt  README.md  package.xml  pytest.launch  setup.py
ude_ros_env/test/: test_ude_ros_env_import.py
ude_ros_env/test/test_ude_ros_env/: test_ros_env.py  test_ros_env_side_channel.py  test_service_proxy_wrapper.py
ude_ros_env/ude_ros_env/: __init__.py  constants.py  ros_env.py  ros_env_interface.py  ros_env_side_channel.py  service_proxy_wrapper.py
ude_ros_msgs/: CMakeLists.txt  package.xml
ude_ros_msgs/msg/: UDESideChannelData.msg
ude_ros_msgs/srv/: GetUDEServerConfig.srv  SetUDEServerConfig.srv  UDEActionSpaceSrv.srv  UDECloseSrv.srv  UDEObservationSpaceSrv.srv  UDEResetSrv.srv  UDESideChannelSrv.srv  UDEStepSrv.srv
ude_ros_server/: CMakeLists.txt  README.md  package.xml  pytest.launch  setup.py
ude_ros_server/config/: params.yaml
ude_ros_server/launch/: ude_ros_server.launch
ude_ros_server/test/: test_ude_ros_server_import.py
ude_ros_server/test/test_ude_ros_server/: test_ros_environment_adapter.py  test_ros_side_channel.py  test_service_proxy_wrapper.py  test_ude_ros_server_config.py  test_ude_ros_server_node.py
ude_ros_server/ude_ros_server/: constants.py  ros_environment_adapter.py  ros_side_channel.py  service_proxy_wrapper.py  ude_ros_server_config.py  ude_ros_server_node.py
